# dt-visual-servoing

./: .gitignore  .gitmodules  Dockerfile  DockerfileNB  Makefile  README.md  docker-compose-duckie-remote.yaml  docker-compose-fifos.yaml  docker-compose-sim.yaml  docker-compose.yaml  lf_slim.launch  local_experiment.py  parameters.env  readme.md  requirements.txt  reset_to.txt  rosagent.py  run_test.sh  solution.py  start.sh  submission.yaml  test.py  todo.txt
1_develop/: .gitmodules  Dockerfile  DockerfileNB  DockerfileSim  docker-compose.yaml  docker-compose.yml  rosagent.py  solution2.py  start.sh
1_develop/custom/: lf_slim.launch
1_develop/setup/: launch_sim.sh  requirements.txt
1_develop/utils/: ros_helpers.py
2_test/: Dockerfile  DockerfileRosAgent  rosagent.py
3_submit/: Dockerfile  Makefile  lf_slim.launch  requirements.txt  rosagent.py  solution.py
catkin_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
control/: Dockerfile  config.yaml  submission.yaml
control/launchers/: run.sh  submit.sh
control/notebooks/: 03-control.ipynb
exercises/exercise2/: mooc-exe.yaml
fifos_connector/: Dockerfile  middleware.py  middleware.py.work  requirements.txt
local/: Dockerfile  DockerfileRosAgent  docker-compose-lf.yml  lf_slim.launch
obj_det/: Dockerfile  Dockerfile.ml  clone.sh  config.yaml  requirements.txt
object_detection/: .gitignore  README.md  setup.sh
object_detection/exercise_ws/src/pedestrian_avoidance/: package.xml  setup.py
planning/: Dockerfile
representations/: config.yaml
setup/: .requirements.txt.swp  DockerfileNB  parameters.env  requirementsnb.txt  requirementspy2.txt  requirementssub.resolved  ros_env.yaml  sim_env.yaml  solution.py
simulator/: .dockerignore  Dockerfile  Makefile  gym_bridge.py  launch.sh  requirements.txt
state_estimation/: submission.yaml
submission/: Dockerfile  README.md  requirements.txt  solution.py
template_ros/: Dockerfile
template_ros/exercise_ws/src/custom_msgs/: CMakeLists.txt  package.xml
template_ros/exercise_ws/src/custom_msgs/msg/: PixelListList.msg
visual-servoing/: README.md  config.yaml  requirements.txt  submission.yaml
visual-servoing/exercise_ws/src/custom_msgs/: CMakeLists.txt
visual-servoing/exercise_ws/src/custom_msgs/msg/: FloatList.msg
(+1420 files in other folders)
