<?xml version="1.0"?>
<package>
  <name>pedestrian_avoidance</name>
  <version>1.0.0</version>
  <description>The package for avoiding duckie pedestrians</description>

  <author email="paulll@iro.umontreal.ca">Liam</author>
  <maintainer email='paull@mit.edu'>Liam Paull</maintainer>

  <license>GPLv3</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>duckietown_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>duckietown_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>


</package>
